--- a/index.html
+++ b/index.html
@@ -26,5 +26,13 @@
         <button>Click Me</button>
         <button class="firstButton">Click me</button>
     </div>
+    <section class="grocery-list">
+    <ul class="list">
+        <li>create a css folder</li>
+        <li>create a style.scss file</li>
+        <li>run with Watch Sass on blue header</li>
+        <li></li>
+    </ul>
+</section>
 </body>
 </html>
