--- a/index.html
+++ b/index.html
@@ -34,5 +34,20 @@
         <li></li>
     </ul>
 </section>
+<div class="title">
+    <h1>Title</h1>
+</div>
+<div class="title">
+    <h1>section 2</h1>
+</div>
+<script>
+    document.querySelector('.title').addEventListener('click', function( ) {
+        document.querySelector('.title').querySelector('h1').innerHTML ='Hello world!';
+    
+    const diver = document.createElement('div');
+        diver.classList.add('hello');
+        diver.innerHTML = 'Hello world!';
+        document.body.appendChild(div);});
+</script>
 </body>
 </html>
